--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;1,600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
     
     
 }
