--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -19,4 +18,8 @@
 
 body {
   font-family: "PoynterOSDisp", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
