--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
 }
 a {
   cursor: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="%23e2e2c7"><circle cx="12" cy="12" r="10" /></svg>') 12 12, auto;
-
+  text-decoration: none;
 }
 
 
